--- a/configure.ac
+++ b/configure.ac
@@ -33,6 +33,7 @@ AM_PROG_LIBTOOL
 PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 2.12    ])
 PKG_CHECK_MODULES(CLUTTER, [clutter-1.0])
 PKG_CHECK_MODULES(CLUTTER_GTK, [clutter-gtk-0.90])
+PKG_CHECK_MODULES(GOBJECT_INTROSPECTION, gobject-introspection-1.0 >= 0.6.3)
 
 
 
