Revert "Commit a basic GlideSlide class with some work in to GlideDocument"
This reverts commit 58d670ce508020a144490647ab9907a0e51ac650.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,9 +38,7 @@ glide_SOURCES = \
 	glide-dirs.c \
 	glide-dirs.h \
 	glide-document.c \
-	glide-document.h \
-	glide-slide.c \
-	glide-slide.h 
+	glide-document.h 
 
 glide_LDFLAGS = \
 	-Wl,--export-dynamic
