Add a GlideSlide class...functions a bit like ClutterGroup for now. Work out the unfortunate circular depenencies from the earlier reverted committ as well

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,7 +39,9 @@ glide_SOURCES = \
 	glide-dirs.h \
 	glide-document.c \
 	glide-document.h \
-	glide-types.h
+	glide-types.h \
+	glide-slide.h \
+	glide-slide.c 
 
 glide_LDFLAGS = \
 	-Wl,--export-dynamic
