Start factoring in to a glide_gtk_util_show_image_dialog func for opening images. make glide_window_new_image use it

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,7 +44,9 @@ glide_SOURCES = \
 	glide-slide.h \
 	glide-slide.c \
 	glide-json-util.h \
-	glide-json-util.c 
+	glide-json-util.c \
+	glide-gtk-util.h \
+	glide-gtk-util.c 
 
 glide_LDFLAGS = \
 	-Wl,--export-dynamic
