--- a/configure.ac
+++ b/configure.ac
@@ -35,6 +35,7 @@ PKG_CHECK_MODULES(CLUTTER, [clutter-1.0])
 PKG_CHECK_MODULES(CLUTTER_GTK, [clutter-gtk-0.90])
 PKG_CHECK_MODULES(GOBJECT_INTROSPECTION, gobject-introspection-1.0 >= 0.6.3)
 PKG_CHECK_MODULES(JSON_GLIB, json-glib-1.0)
+PKG_CHECK_MODULES(GMODULE, gmodule-2.0)
 
 
 
