--- a/configure.ac
+++ b/configure.ac
@@ -23,12 +23,10 @@ AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
 AM_GLIB_GNU_GETTEXT
 IT_PROG_INTLTOOL([0.35.0])
-
-
+	
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 AM_PROG_LIBTOOL
-
-
 
 PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 2.12    ])
 PKG_CHECK_MODULES(CLUTTER, [clutter-1.0])
